# Game-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/shaders/: TODO.txt
engine/core/: TODO.txt  main.cpp
engine/input/: input.cpp  input.h
engine/render/: render.cpp  render.h
